Refactor: Enabled the possibility to create posts with non-exclamation answers

--- a/_posts/2024-04-27-albina.md
+++ b/_posts/2024-04-27-albina.md
@@ -1,9 +1,9 @@
 ---
 layout: custom-post
 title: albina
-answer: roiu
+answer: Roiu!
 tag: SFW
 source: childhood
 ---
 
-{{ page.answer | answerify }}
+{{ page.answer }}
