--- a/_posts/2024-04-27-carpa.md
+++ b/_posts/2024-04-27-carpa.md
@@ -1,9 +1,9 @@
 ---
 layout: custom-post
 title: cârpa
-answer: Șterge-o!
+solution: Șterge-o!
 tag: SFW
 source: childhood
 ---
 
-{{ page.answer }}
+{{ page.solution }}
