--- a/_posts/2024-04-27-guma.md
+++ b/_posts/2024-04-27-guma.md
@@ -1,9 +1,9 @@
 ---
 layout: custom-post
 title: guma
-answer: Întinde-o!
+solution: Întinde-o!
 tag: SFW
 source: childhood
 ---
 
-{{ page.answer }}
+{{ page.solution }}
