--- a/_posts/2024-04-28-Tudor.md
+++ b/_posts/2024-04-28-Tudor.md
@@ -1,9 +1,9 @@
 ---
 layout: custom-post
 title: Tudor
-answer: Tu dormeai când o futeam pe mă-ta!
+solution: Tu dormeai când o futeam pe mă-ta!
 tag: NSFW
 source: childhood
 ---
 
-{{ page.answer }}
+{{ page.solution }}
