--- a/_posts/2024-04-27-dealu.md
+++ b/_posts/2024-04-27-dealu.md
@@ -1,9 +1,9 @@
 ---
 layout: custom-post
 title: dealu
-answer: Valea!
+solution: Valea!
 tag: SFW
 source: childhood
 ---
 
-{{ page.answer }}
+{{ page.solution }}
